--- a/nextflow.config
+++ b/nextflow.config
@@ -140,18 +140,18 @@ process {
 	//Path to the Guppy GPU and CPU container images (v3.6.1). Uncomment and change this as appropriate if providing Guppy as a container image. 
 	//withLabel: guppy_gpu { container = '' }
 	//withLabel: guppy_cpu { container = '' }
-	withLabel: pycoqc { container = 'docker://quay.io/biocontainers/pycoqc:2.5.0.23--py_0' }
-	withName: demultiplexing_qcat { container = 'docker://quay.io/biocontainers/qcat:1.0.1--py_0' }
-	withName: rasusa { container = 'docker://quay.io/biocontainers/rasusa:0.3.0--h516909a_0' }
-	withName: porechop { container = 'docker://quay.io/biocontainers/porechop:0.2.3_seqan2.1.1--0' }
-   	withName: filtlong { container = 'docker://quay.io/biocontainers/filtlong:0.2.0--he513fc3_3' }
+	withLabel: pycoqc { container = 'docker://quay.io/biocontainers/pycoqc:2.5.2--py_0' }
+	withName: demultiplexing_qcat { container = 'docker://quay.io/biocontainers/qcat:1.1.0--pyh864c0ab_1' }
+	withName: rasusa { container = 'docker://quay.io/biocontainers/rasusa:0.7.1--h031d066_2' }
+	withName: porechop { container = 'docker://quay.io/biocontainers/porechop:0.2.4--py39h1f90b4d_6' }
+   	withName: filtlong { container = 'docker://quay.io/biocontainers/filtlong:0.2.1--hdcf5f25_3' }
    	withName: japsa { container = 'docker://vmurigneux/japsa:latest' }
-	withName: flye { container = 'docker://quay.io/biocontainers/flye:2.5--py27he513fc3_0' }
-	withName: racon_cpu { container = 'docker://vmurigneux/racon:1.4.9' }
-        withLabel: medaka { container = 'docker://quay.io/biocontainers/medaka:0.10.0--py36hbcae180_1' }
-        withLabel: nextpolish { container = 'docker://pvstodghill/nextpolish:1.1.0__2020-05-12' }
+	withName: flye { container = 'docker://docker pull quay.io/biocontainers/flye:2.9.2--py310h2b6aa90_2' }
+	withName: racon_cpu { container = 'docker://quay.io/biocontainers/racon:1.5.0--h21ec9f0_2' }
+        withLabel: medaka { container = 'docker://quay.io/biocontainers/medaka:1.8.0--py38hdaa7744_0' }
+        withLabel: nextpolish { container = 'docker://quay.io/biocontainers/nextpolish:1.4.1--py311he4a0461_1' }
 	withLabel: circlator { container = 'docker://quay.io/biocontainers/circlator:1.5.5--py_3' }
-	withName: quast { container = 'docker://quay.io/biocontainers/quast:5.0.2--py37pl526hb5aa323_2' }
+	withName: quast { container = 'docker://quay.io/biocontainers/quast:5.2.0--py39pl5321h4e691d4_3' }
 	//errorStrategy = 'ignore'
 }
 
